[gd_scene load_steps=5 format=2]

[ext_resource path="res://Graphics/title.png" type="Texture" id=1]
[ext_resource path="res://Graphics/title_background.png" type="Texture" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Scenes/ButtonTheme.tres" type="Theme" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 512.0
margin_bottom = 512.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="."]
margin_left = 11.7319
margin_top = 104.317
margin_right = 511.732
margin_bottom = 223.317
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 256.0
margin_top = 433.0
margin_right = -256.0
margin_bottom = -96.0
custom_constants/separation = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Button" parent="VBoxContainer"]
margin_right = 512.0
margin_bottom = 122.0
size_flags_vertical = 3
theme = ExtResource( 4 )
text = "Text-Based Tutorial"

[node name="NewGame" type="Button" parent="VBoxContainer"]
margin_top = 186.0
margin_right = 512.0
margin_bottom = 308.0
size_flags_vertical = 3
theme = ExtResource( 4 )
text = "New Game"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 372.0
margin_right = 512.0
margin_bottom = 495.0
size_flags_vertical = 3
theme = ExtResource( 4 )
text = "Credits"

[node name="Tutorial" type="AcceptDialog" parent="."]
margin_left = 15.0
margin_top = 360.0
margin_right = 1008.0
margin_bottom = 1009.0
window_title = "Tutorial"
dialog_text = "You're Grape Labs' top engineer, and your boss, the illustrious Kevin Grape, has a new task for you. He's heard of a new craze about billionaires going to the edge of space with their own rockets, but he wants to take it a step further: to orbit.

You are to build his vehicle. With such a limited budget, the task may seem impossible. But you know the consequences if you fail. Don't worry about not making it on the first try, however. Every time you fail without killing your boss, you will recieve an extended budget to build an even bigger rocket. Just make sure your rocket doesn't explode.

Explosions can happen in two, somewhat related ways:

1. High accelerations: this can be caused by excessive engine force, high air resistance, or sudden impact with another physics body like the ground. (TIP: air resistance is directly related to both speed and air pressure. Make sure you're not going too fast at low altitudes to prevent high air resistance)

2. High temperatures: of course, you don't want any critical parts of your rocket to melt during flight. Temperature is directly related to air resistance, so again, try to prevent your rocket from going too fast at low altitudes.

To build your rocket in the first place, you need to construct it stage by stage. A stage is a section of a rocket that consists of a tank holding propellant and the engines themselves. Stages are separated from the rocket one by one during flight. This helps minimize the mass and therefore efficiency of your rocket because each tank that doesn't have propellant anymore is essentially just dead weight when it's still attached. After every flight, you will get to add a new stage or edit an existing stage, which will cost money. When you're editing the amount of engines, you will want to make sure that there are enough engines on each stage to lift the weight of both itself and the stages above it.

Here are some general gameplay tips:

1. Getting into space only requires sufficient vertical (y) velocity since all you need is a high enough altitude to reach a vacuum. However, getting into orbit requires a hell of a lot more horizontal (x) velocity because your rocket needs to be going fast enough sideways such that the earth \"curves away from you\" as fast or even faster than gravity can pull you back down towards it. So make sure you emphasize propelling your rocket sideways to get into an orbit.

2. Before you go sideways, however, you'll want to get out of the atmosphere first. Atmospheric drag can prevent your rocket from going sufficiently fast horizontally, which is why you see all real-life rocket launches go directly upwards before transitioning to horizontal. You'll want to do the same with your rocket. For reference, atmospheric drag becomes zero at an altitude of 160 km, which is the recommended minimum altitude for your orbit.

3. Controlling a rocket is not a naturally-intuitive thing for a human to do. Don't be surprised if your rocket has any unexpected motions.

Good luck with your journey as a rocket engineer, your boss is counting on you."
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="AcceptDialog" parent="."]
margin_left = 252.0
margin_top = 360.0
margin_right = 773.0
margin_bottom = 967.0
window_title = "Credits"
dialog_text = "Game conception and design: XionNeutrino"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
